# gokz-qqbot

./: .gitignore  README.md  bot.py  clovers.toml  pyproject.toml  requirements.txt  test.py
data/gokz/json/: top20_players.json
data/gokz/sound/: fafnir.silk
src/plugins/gokz/: __init__.py  config.py
src/plugins/gokz/api_call/: dataclasses.py  helper.py  kztimerglobal.py
src/plugins/gokz/bot_utils/: command_helper.py
src/plugins/gokz/database/: db.py  deps.py  models.py
src/plugins/gokz/dataclasses/: record.py
src/plugins/gokz/plugins/: general.py  gokztop.py  group_join_approve.py  kzglobal.py
src/plugins/gokz/utils/: aiohttp_requests.py  config.py  file_oper.py  formatter.py  kreedz.py  map_img_url.py  steam_user.py
src/plugins/gokz/utils/kz/: records.py  screenshot.py
