[project]
name = "gokz-qqbot"
version = "0.1.0"
description = "gokz-qqbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    # { name = "QQ", module_name = "nonebot.adapters.qq" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
#    { name = "Console", module_name = "nonebot.adapters.console" }
]
plugins = ["nonebot_plugin_setu4", "nonebot_plugin_addFriend", "nonebot_plugin_localstore"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
